# simulation-game

./: .gitignore  Cargo.toml  credits.yaml
assets/: back_button.aseprite  sprite_map.ase  sprite_map.ron
assets/egui/: save_button.kra
data/: user-config.toml
data/levels/: 1.json  2.json  test.json  uncompressed.json
data/levels/user/1/: example1.save  nand.save  solution1.save  wires.save
data/themes/: Frappe.json  Latte.json  Macchiato.json  Mocha.json  catppuccin-license
dependencies/merlin_pick_backend/: Cargo.toml  NOTICE
dependencies/merlin_pick_backend/src/: lib.rs
design/: ports.md  run_system.md
scripts/: colour_gen.py  input.txt
src/: config.rs  game.rs  level_select.rs  main.rs  main_menu.rs  main_menu2.rs  main_old.rs  minimum_reproducable.rs  settings.rs
src/components/: board.rs  grid.rs  mod.rs  occupation_grid.rs  placement.rs  shared.rs  temp.rs  wires.rs
src/sim/: helpers.rs  interactions.rs  level.rs  levels.rs  mod.rs  model.rs  port_grid.rs  run.rs  save_load.rs
src/sim/components/: and.rs  copy.rs  counter.rs  mod.rs  not.rs  observer.rs  passthrough.rs  provider.rs  wire.rs
src/ui/: dummy_component.rs  mod.rs  shared.rs  textbox.rs
src/ui/egui/: colours.rs  left_panel.rs  main.rs  mod.rs  theming.rs
