[package]
name = "sim_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = ["dynamic","jpeg"] }
iyes_loopless = "0.9.1"
rand = "0.8.5"
#bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", branch = "beta", features = ["backend_sprite", "debug"]}
bevy_mod_picking = { path = "./dependencies/bevy_mod_picking", features = ["backend_sprite", "debug"], default-features = false}
bevy_egui = "0.18.0"
strum = "0.24.1"
strum_macros = "0.24"
bevy_framepace = { version = "0.10.0", default-features = false }
enum_dispatch = "0.3.11"
bevy_heterogeneous_texture_atlas_loader = "0.10.0"
bevy_asset_loader = { version = "0.14.1", features = ["stageless"] }
bevy_pixel_camera = "0.3.0"
bevy-inspector-egui = "0.17.0"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


