[package]
name = "sim_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking","jpeg"] }
rand = "0.8.5"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "f1b6997"}
#bevy_mod_picking = { path = "./dependencies/bevy_mod_picking", features = ["debug"], default-features = false}
merlin_pick_backend = { path = "./dependencies/merlin_pick_backend", features = ["pixel_camera", "sprite", "texture_atlas_sprite"]}
bevy_egui = "0.20"
strum = "0.24.1"
strum_macros = "0.24"
bevy_framepace = { version = "0.12", default-features = false }
enum_dispatch = "0.3.11"
bevy_heterogeneous_texture_atlas_loader = { path = "./dependencies/bevy_heterogeneous_texture_atlas_loader"}
bevy_asset_loader = { version = "0.16" }
bevy_pixel_camera = "0.4"
bevy-inspector-egui = "0.18"
egui = "0.21"
lazy_static = "1.4.0"
serde = "1.0.152"
serde_json = "1.0.92"
toml = "0.7.1"
ron = "0.8.0"
enum-map = { version = "2.5", features = ["serde"]}
catppuccin-egui = "2.0.1"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[patch.crates-io]
bevy_sprite = { path = "./dependencies/bevy_sprite" }
